2010-06-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * tagmanager/tm_work_object.c:
   Change of description of tm_get_real_path(). Patch by Dimitar Zhekov.
   Thanks.


2010-06-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.h, src/dialogs.c, src/plugindata.h, src/search.c,
   src/plugins.c, src/ui_utils.c, plugins/geanyfunctions.h:
   Add ui_combo_box_add_to_history() to API.
 * plugins/filebrowser.c:
   Add history to path entry.
 * src/plugindata.h, src/plugins.c, doc/plugins.dox:
   Fix not loading plugins built against a newer API when Geany doesn't
   provide the required version given in PLUGIN_VERSION_CHECK().
   Improve documentation for PLUGIN_VERSION_CHECK().
 * plugins/filebrowser.c:
   Allow Find in Files when no items are selected.
 * src/build.c, src/geanyobject.c, src/geanyobject.h, doc/plugins.dox:
   Add API signal "build-start" (patch by Jiří Techet, thanks).


2010-06-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/sidebar.c:
   Replace /home/user with ~ in the documents list (patch by Jon
   Strait, thanks).
 * src/build.c:
   Make default Build dialog entries grey, not light grey (too hard to
   read on a white background).
 * src/ui_utils.c:
   Display 'new instance' on title bar (patch by Eugene Arshinov,
   thanks).
 * src/ui_utils.c:
   Remove any duplicate on adding to combo box histories.


2010-06-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/notebook.c:
   Align notebook tab close buttons centred vertically - thanks to
   Robux.Biz (galyuk).
 * Merge unstable branch:
 - src/build.c:
   Make build config entries light grey until set.
 - src/keybindings.c, src/about.c, THANKS:
   Fix the wrong file being put on top of the stack when switching tabs
   too quickly (patch from Jiří Techet, thanks).
 - src/templates.c, data/templates/gpl, data/templates/function,
   data/templates/changelog, data/templates/bsd,